--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>This is JS EVENT.</h1>
     <button onclick="alert('shabdhan! You are a Hacker')">Shabdhan</button>
     <button onclick="console.log(5+5)">Click Me 2</button>
+    <button onclick="document.body.style.backgroundColor ='red';">Make Red</button>
+    <button onclick="makeGreen()">Make Green</button>
 
 
     <script src="./js/main.js"></script>
