--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <button onclick="console.log(5+5)">Click Me 2</button>
     <button onclick="document.body.style.backgroundColor ='red';">Make Red</button>
     <button onclick="makeGreen()">Make Green</button>
+    <button id="make-yellow">Make Yellow</button>
+    <button id="make-golden">Make Golden</button>
 
 
     <script src="./js/main.js"></script>
